gl33-master/src/test/deca/context/invalid/other/declaration_meme_nom.deca
// Invalid
// Déclaration des variables de même nom


{
   int a = 2;
   float a;
   string a;
   void a;
}
